# peex

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
0_language/: README.md
0_language/evidence/: CMakeLists.txt
0_language/evidence/data/: data2.txt
0_language/evidence/include/: filesystem.hpp  utilities.hpp
0_language/evidence/src/: data_n_time.cpp  exceptions.cpp  filesystem.cpp  mathematical_operations.cpp  regular_expressions.cpp
10_generative_ai/: CLEAR_PROMPT.md  PROJECT_INVESTIGATION.md  README.md
1_libraries/: README.md
1_libraries/evidence/: CMakeLists.txt
1_libraries/evidence/date_n_time_libs/: CMakeLists.txt
1_libraries/evidence/structured_data/: CMakeLists.txt
1_libraries/evidence/structured_data/data/: address.json  address.xml
1_libraries/evidence/structured_data/src/: json.cpp  xml.cpp
2_testing/: README.md
2_testing/infos/: AUTOMATED_TESTING_METHODOLOGIES.md  INTEGRATION_TESTING.md  ISOLATION.md
3_design/: DIFFERENT_REQUIREMENT_SOURCES.md  README.md  REQUIREMENT_SOURCES.md  TERMS.md
4_dev_tooling/: PROFILING.md  README.md  STATIC_ANALYSIS.md
5_data_storages/: COMBINING_QUERIES.md  README.md  TRANSACTIONS.md
6_cloud/: AWS_CLI.md  README.md  STORING_DATA_IN_CLOUD.md
7_project_process/: README.md
7_project_process/answers/: 0_software_process.md
8_technical_process/: ESTIMATION.md  MANAGING_TECH_DEBT.md  README.md
