set(JSON_BuildTests OFF CACHE INTERNAL "")

add_subdirectory(dependencies/nlomann/json)
add_subdirectory(dependencies/pugixml)
add_subdirectory(dependencies/HowardHinnant/date)
add_subdirectory(cpp_web_example)
add_subdirectory(evograph)
add_subdirectory(doxygen_example)
add_subdirectory(structured_data)
add_subdirectory(date_n_time_libs)
add_subdirectory(zlib_example)
